Added network_security_configuration.xml file to specify http is allowed with localhost for development and updated AndroidManifest.xml to specify this. Also updated LoginActivity.java to use Retrofit to connect to server and log user in based on actual credentials in database.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
+        android:networkSecurityConfig="@xml/network_security_configuration"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -40,13 +41,7 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-
     </application>
-
-
-
-
 
 
 </manifest>
