--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 22 13:28:14 GMT 2024
-sdk.dir=C\:\\Users\\maria\\AppData\\Local\\Android\\Sdk
+#Tue Jan 23 11:20:09 GMT 2024
+sdk.dir=C\:\\Users\\liam1\\AppData\\Local\\Android\\Sdk
