--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 23 17:19:14 GMT 2024
-sdk.dir=C\:\\Users\\maria\\AppData\\Local\\Android\\Sdk
+#Wed Jan 24 12:55:26 GMT 2024
+sdk.dir=C\:\\Users\\liam1\\AppData\\Local\\Android\\Sdk
