Changes to support containerization.

--- a/server_webcam_processing/Dockerfile
+++ b/server_webcam_processing/Dockerfile
@@ -2,8 +2,9 @@ FROM python:3-slim
 
 WORKDIR /usr/app/src
 
-COPY . ./
+COPY requirements.txt /usr/app/src/
+COPY . /usr/app/src/app
 
 RUN pip install -r requirements.txt
 
-CMD [ "python3" "./sample.py"]
+CMD [ "python3", "sample.py"]
