--- a/server_webcam_processing/Dockerfile
+++ b/server_webcam_processing/Dockerfile
@@ -2,8 +2,10 @@ FROM python:3-slim
 
 WORKDIR /usr/app/src
 
+RUN apt-get update \
+    && apt-get install -y libgl1-mesa-glx libglib2.0-0
 COPY requirements.txt /usr/app/src/
-COPY . /usr/app/src/app
+COPY . /usr/app/src/
 
 RUN pip install -r requirements.txt
 
