--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
     <application
         android:networkSecurityConfig="@xml/network_security_configuration"
         android:allowBackup="true"
@@ -38,6 +34,13 @@
         <activity android:name=".SignUpActivity">
         </activity>
 
+        <activity
+            android:name="com.example.chomg.IPCameraActivity"
+            android:exported="true">
+
+    </activity>
+
+
         <activity android:name=".HomeActivity" android:exported="true">
             <!-- Intent filter for external access (if applicable) -->
             <intent-filter>
@@ -48,9 +51,8 @@
 
 
 
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
@@ -63,14 +65,9 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-
-
-
 
 
 
