Added forgotpassword activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,16 @@
 
     </activity>
 
+        <activity android:name=".ForgotPasswordActivity" android:exported="true">
+            <!-- Intent filter for external access (if applicable) -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
+
 
         <activity android:name=".HomeActivity" android:exported="true">
             <!-- Intent filter for external access (if applicable) -->
