Implemented firebase into android project, so push notifications can be sent form server to app when needed. Updated API interface, and User class to include fcm token. Included necessary dependencies for firebase. Also updated login and sign up acitivites

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,7 +89,12 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-
+        <service android:name=".service.FirebaseMessagingService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
